v0.9.4
* [BGBUILD-263] NoMethodError: undefined method `item' for nil:NilClass while creating EBS appliance

v0.9.3

* [BGBUILD-232] boxgrinder doesn't validate config early enough
* [BGBUILD-237] Tilde characters break creation of yum.conf
* [BGBUILD-223] BoxGrinder hangs because qemu.wrapper does not detect x86_64 properly on CentOS 5.6
* [BGBUILD-241] Add Scientific Linux support
* [BGBUILD-220] Group names have spaces (to the user), this breaks schema rules for packages
* [BGBUILD-222] Allow overwrite of uploaded ec2 image
* [BGBUILD-225] Move PAE configuration parameter to operating system configuration
* [BGBUILD-224] EBS Plugin Support for CentOS v5.5 and fix for non-integer EBS disk sizes
* [BGBUILD-231] Cannot register Fedora 15 EC2 AMI with S3 delivery plugin in eu-west-1 availability zone
* [BGBUILD-193] EBS delivery plugin timing/concurrency issues
* [BGBUILD-247] ap-northeast-1 end-point is missing in S3 plugin (added Tokyo region)
* [BGBUILD-251] Add ap-northeast-1 (tokyo) region for EBS plugin
* [BGBUILD-248] Throw error in S3 plugin if invalid region is specified
* [BGBUILD-252] rc.local script fills ~/.ssh/authorized_keys with a duplicate key every boot
* [BGBUILD-250] EBS plugin incorrectly determines that non-US regions are not EC2 instances
* [BGBUILD-254] Not able to deliver EBS AMIs to regions other than us-east-1
* [BGBUILD-260] Wrong EC2 discovery causing libguestfs errors on non US regions
* [BGBUILD-261] Decrease amount of debug log when downloading or uploading file using guestfs

v0.9.2

* [BGBUILD-148] Add support for building CentOS/RHEL images on Fedora
* [BGBUILD-204] Fedora 15 appliance networking start on boot failed
* [BGBUILD-208] Kickstart files not working with 0.9.1
* [BGBUILD-205] Error while converting to EC2 when guest OS is CentOS/RHEL 5
* [BGBUILD-213] CloudSigma support
* [BGBUILD-209] Wrong /etc/mtab on Fedora 15 appliances causes errors
* [BGBUILD-203] Vmware vmdk disk size is wrong when installing via kickstart files